examples/ok/never_ok.hax

module ZZZ::NeverOk;

sub f(Bool $b) -> Int {
  if ($b) {
    return 1;
  } else {
    panic();
  }
}

sub main() -> Int {
  return f(true);
}
