examples/fail/assign_eq_type_mismatch.hax
module ZZZ::AssignEqTypeMismatch;

sub main() -> Int {
  var Int $x = 1;
  $x = true;
  return $x;
}
